[package]
name = "project_manager_api"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
fluent-uri = "0.3.2"
thiserror = "1.0.57"
toml = "1.0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled", "backup"]

[dev-dependencies]
serde_json = "1.0"
rand = "0.8.5"
